--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,6 +14,7 @@
         <link href="/assets/css/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
               rel="stylesheet">
+        <link rel="stylesheet" href="/assets/css/game.css">
     {% endblock %}
     {% block favicon  %}
         <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
@@ -43,6 +43,8 @@
                         <li><a class="nav-link {% if app.request.attributes.get('_route') == "signup"   %}active{% endif %}"  href={{ path('signup')}}>Sign Up</a></li>
                         <li><a class="nav-link {% if app.request.attributes.get('_route') == "login"  %}active{% endif %}"  href={{ path('login')}}>Login</a></li>
                         <li><a class="nav-link {% if  app.request.attributes.get('_route') == "contact"  %}active{% endif %}"  href={{ path('contact')}}>Contact</a></li>
+                        <li>{% block game %} {% endblock %}</li>
+
                     {% endblock %}
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -57,6 +59,8 @@
     </body>
 
 {%  block JS %}
+
+
     <!-- Vendor JS Files -->
     <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -67,5 +71,8 @@
 
     <!-- Template Main JS File -->
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/game.js"></script>
+
+
 {%  endblock %}
 </html>
