--- a/templates/clubs/index.html.twig
+++ b/templates/clubs/index.html.twig
@@ -27,22 +27,25 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <script>
+        $(document).ready(function(){
+            $("#exampleModal").modal('show');
+        });
+    </script>
 {% endblock %}
 {% block body %}
+{%  block game %}
+    <!-- Button trigger modal -->
+    <button type="button "  class="nav-link btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">Come back to Game</button>
+    {% endblock %}
 
 
-
+    {{ include('entring_game/index.html.twig',{'variable':'valeur'}) }}
 
     {{ include('clubs/fragments/caroussel.html.twig',{'variable':'valeur'}) }}
-
-
-
-
     {{ include('clubs/fragments/welcome.html.twig',{'variable':'valeur'}) }}
     {{ include('clubs/fragments/rebriqueclubs.html.twig',{'variable':'valeur'}) }}
     {{ include('clubs/fragments/rebriquepruducts.html.twig',{'variable':'valeur'}) }}
-
     {{ include('clubs/fragments/team.html.twig',{'variable':'valeur'}) }}
     {{ include('clubs/fragments/media.html.twig',{'variable':'valeur'}) }}
     {{ include('clubs/fragments/footer.html.twig',{'variable':'valeur'}) }}
