--- a/templates/entring_game/index.html.twig
+++ b/templates/entring_game/index.html.twig
@@ -11,7 +11,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div id="game" class="row  justify-content-center" ">
+                    <div id="game" class="row  justify-content-center">
                         <p class="d-flex justify-content-center">
                             <img id="letsplay" src="/img/letsplay1.gif" alt="">
                             <button id="start" class="btn btn-outline-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" onclick="startGame()">
