--- a/templates/arbtx/fragments/SectionProducts.html.twig
+++ b/templates/arbtx/fragments/SectionProducts.html.twig
@@ -1,7 +1,8 @@
 <!-- ======= Products Section ======= -->
-<section id="products" class="portfolio">
-    <div class="container">
 
+<div class="container">
+
+    <div class="portfolio">
         <div class="section-title">
             <h2>Products</h2>
             <p>Our Products</p>
@@ -10,18 +11,18 @@
 
 
 
-            {% set Products = [
-                {'name':'Hoodie','description':'35 DT','img1':"/img/Clubs/Aerobotix/products/prod1.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod1.png"},
-                {'name':'T-Shirt','description':'28 DT','img1':"/img/Clubs/Aerobotix/products/prod2.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod2.png"},
-                {'name':'3D Impression','description':'2 DT for the 10 g','img1':"/img/Clubs/Aerobotix/products/prod3.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod3.png"}
-            ]%}
+        {% set Produits = [
+            {'name':'Hoodie','description':'35 DT','img1':"/img/Clubs/Aerobotix/products/prod1.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod1.png"},
+            {'name':'T-Shirt','description':'28 DT','img1':"/img/Clubs/Aerobotix/products/prod2.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod2.png"},
+            {'name':'3D Impression','description':'2 DT for the 10 g','img1':"/img/Clubs/Aerobotix/products/prod3.png",'filter':'','img2':"/img/Clubs/Aerobotix/products/prod3.png"}
+        ]%}
 
-            {{ include('arbtx/fragments/productItem.html.twig',{'table':Products}) }}
+        {{ include('arbtx/fragments/productItem.html.twig',{'table':Produits}) }}
 
 
 
 
     </div>
-</section><!-- End Products Section -->
+</div>
 
 
