--- a/templates/entring_game/index.html.twig
+++ b/templates/entring_game/index.html.twig
@@ -1,5 +1,73 @@
 
+<style>
+    .demo{ background-color: #d63031; }
+    .pagination-outer{ text-align: center; }
+    .pagination{
+        background: linear-gradient(to right,transparent,transparent);
+        font-family: 'Rubik', sans-serif;
+        padding: 0 30px;
+        display: inline-flex;
+        position: relative;
+    }
+    .pagination li a.page-link{
+        color: #d63031;
+        background-color: transparent;
+        font-size: 22px;
+        line-height: 40px;
+        height: 50px;
+        width: 40px;
+        border: none;
+        border-radius: 0;
+        overflow: hidden;
+        position: relative;
+        transition: all 0.4s ease 0s;
+    }
+    .pagination li.active a.page-link,
+    .pagination li a.page-link:hover,
+    .pagination li.active a.page-link:hover{
+        color: #fff;
+        background-color: transparent;
+        text-shadow: 0 0 10px #000;
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    .pagination li a.page-link:before,
+    .pagination li a.page-link:after{
+        content: '';
+        background-color: #d63031;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        left: -100%;
+        top: 100%;
+        z-index: -1;
+        -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
+        clip-path: polygon(0 0, 0% 100%, 100% 100%);
+        transition:all 0.3s ease 0s;
+    }
+    .pagination li a.page-link:after{
+        background-color: #ed4040;
+        left: 100%;
+        top: -100%;
+        -webkit-clip-path: polygon(100% 0, 0 0, 100% 100%);
+        clip-path: polygon(100% 0, 0 0, 100% 100%);
+    }
+    .pagination li a.page-link:hover:before,
+    .pagination li.active a.page-link:before,
+    .pagination li a.page-link:hover:after,
+    .pagination li.active a.page-link:after{
+        left: 0;
+        top: 0;
+    }
+    @media only screen and (max-width: 480px){
+        .pagination{ display: block; }
+        .pagination li{
+            margin-bottom: 10px;
+            display: inline-block;
+        }
+    }
 
+
+</style>
 
 
     <!-- Modal -->
