--- a/templates/produit_test/index.html.twig
+++ b/templates/produit_test/index.html.twig
@@ -2,29 +2,32 @@
 
 {% block title %}Hello ProduitTestController!{% endblock %}
 
+
 {% block body %}
 
-    {% if produit==null %}
-    <div style="margin-top:100px" class="alert alert-danger">
-        Produit introuvable
-    </div>
-        {% else %}
-            <div style="margin-top: 100px" class="alert alert-success">
-                Produit {{ produit.getName() }} est {{ etat }}
-            </div>
+    {% if total==null %}
+        <div style="margin-top:100px" class="alert alert-danger">
+            Produit introuvable
+        </div>
+    {% else %}
+        <div style="margin-top: 100px">
+
+            <div class=" ginlined-content container" ">
+            <nav aria-label="Page navigation example" >
+                <ul class="pagination">
+
+                    <li class="page-item"><a class="page-link" href={{ path('all',{'page':max(1,app.request.attributes.get('page')-1),'number':'6'}) }}><</a></li>
+                    {%for i in minpage..maxpage %}
+                        <li class="page-item "><a class="page-link" href={{ path('all',{'page':i,'number':'6'}) }}>{{ i }}</a></li>
+                    {% endfor %}
+                    <li class="page-item"><a class="page-link" href={{ path('all',{'page':min(pages,app.request.attributes.get('page')+1),'number':'6'}) }}>></a></li>
+
+                </ul>
+            </nav></div>
+        </div>
+
+
+
+        {{  include('arbtx/fragments/SectionProducts.html.twig',{'table':Produits}) }}
     {% endif %}
-
-    <div class="container ginlined-content">
-        <nav aria-label="Page navigation example ">
-            <ul class="pagination">
-                {% set pages=(total/6)|round(0,'ceil') %}
-              {% for i in 1..pages %}
-                  <li class="page-item"><a class="page-link" href={{ path('all',{'page':i,'number':'6'}) }}>{{ i }}</a></li>
-              {% endfor %}
-                <li class="page-item"><a class="page-link" href={{ path('all',{'page':min(pages,app.request.attributes.get('page')+1),'number':'6'}) }}>Next</a></li>
-
-            </ul>
-        </nav></div>
-    {{  include('arbtx/fragments/SectionProducts.html.twig',{'table':Produits}) }}
-
 {% endblock %}
