--- a/templates/entring_game/index.html.twig
+++ b/templates/entring_game/index.html.twig
@@ -1,94 +1,21 @@
-
-<style>
-    .demo{ background-color: #d63031; }
-    .pagination-outer{ text-align: center; }
-    .pagination{
-        background: linear-gradient(to right,transparent,transparent);
-        font-family: 'Rubik', sans-serif;
-        padding: 0 30px;
-        display: inline-flex;
-        position: relative;
-    }
-    .pagination li a.page-link{
-        color: #d63031;
-        background-color: transparent;
-        font-size: 22px;
-        line-height: 40px;
-        height: 50px;
-        width: 40px;
-        border: none;
-        border-radius: 0;
-        overflow: hidden;
-        position: relative;
-        transition: all 0.4s ease 0s;
-    }
-    .pagination li.active a.page-link,
-    .pagination li a.page-link:hover,
-    .pagination li.active a.page-link:hover{
-        color: #fff;
-        background-color: transparent;
-        text-shadow: 0 0 10px #000;
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-    .pagination li a.page-link:before,
-    .pagination li a.page-link:after{
-        content: '';
-        background-color: #d63031;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        left: -100%;
-        top: 100%;
-        z-index: -1;
-        -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
-        clip-path: polygon(0 0, 0% 100%, 100% 100%);
-        transition:all 0.3s ease 0s;
-    }
-    .pagination li a.page-link:after{
-        background-color: #ed4040;
-        left: 100%;
-        top: -100%;
-        -webkit-clip-path: polygon(100% 0, 0 0, 100% 100%);
-        clip-path: polygon(100% 0, 0 0, 100% 100%);
-    }
-    .pagination li a.page-link:hover:before,
-    .pagination li.active a.page-link:before,
-    .pagination li a.page-link:hover:after,
-    .pagination li.active a.page-link:after{
-        left: 0;
-        top: 0;
-    }
-    @media only screen and (max-width: 480px){
-        .pagination{ display: block; }
-        .pagination li{
-            margin-bottom: 10px;
-            display: inline-block;
-        }
-    }
-
-
-</style>
-
-
     <!-- Modal -->
-    <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
+    <div class="modal fade bd-example-modal-lg " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg ">
+            <div class="modal-content btn-">
+                <div class="modal-header" id="welcome">
                     <h5 class="modal-title  text-secondary" id="exampleModalLabel">Welcome to INSATCLUBS enjoy the Game!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div id="game" class="row  justify-content-center">
                         <p class="d-flex justify-content-center">
-                            <img id="letsplay" src="/img/letsplay1.gif" alt="">
-                            <button id="start" class="btn btn-outline-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" onclick="startGame()">
+                            <img id="letsplay" src="/img/letsplay1.gif" alt="" >
+                            <button id="start" class="btn btn-outline-secondary" onclick="start()" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                                 Play Game
                             </button>
                         </p>
                         <div class="collapse row" id="collapseExample">
-                            {%  for club in clubs %}
-
+                            {%  for club in clubsgame %}
                                 <div  class="col-sm-3 flip-card-3D-wrapper ">
                                     <div id="flip-card">
                                         <div class="flip-card-front " id="front">
@@ -96,7 +23,7 @@
 
                                         </div>
                                         <div class="flip-card-back ">
-                                            <img class="img-flip" src={{ club['img']}} alt={{ club['name']}}>
+                                            <img class="img-flip" src={{ club.getImg1()}} alt={{ club.getName()}}>
                                         </div>
                                     </div>
                                 </div>
@@ -110,6 +37,7 @@
             </div>
         </div>
     </div>
+
 
 
 
