--- a/templates/entring_game/index.html.twig
+++ b/templates/entring_game/index.html.twig
@@ -1,9 +1,9 @@
     <!-- Modal -->
     <div class="modal fade bd-example-modal-lg " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg ">
-            <div class="modal-content btn-">
+            <div class="modal-content btn-gradient-purple-magenta">
                 <div class="modal-header" id="welcome">
-                    <h5 class="modal-title  text-secondary" id="exampleModalLabel">Welcome to INSATCLUBS enjoy the Game!</h5>
+                    <h5 class="modal-title  text-blue-wood" id="exampleModalLabel">Welcome to INSATCLUBS enjoy the Game!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
