--- a/templates/clubPage/fragments/SectionContact.html.twig
+++ b/templates/clubPage/fragments/SectionContact.html.twig
@@ -13,7 +13,7 @@
                 <div class="info-box">
                     <i class="bx bx-map"></i>
                     <h3>Our Address</h3>
-                    <p>Tunis,1080 ,...</p>
+                    <p>{{ club.adress }}</p>
                 </div>
             </div>
 
@@ -22,10 +22,10 @@
                     <i class="bx bx-share-alt"></i>
                     <h3>Social Profiles</h3>
                     <div class="social-links">
-                        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+                        <a href={{ club.twitter }} class="twitter"><i class="bi bi-twitter"></i></a>
+                        <a href={{ club.facebook }} class="facebook"><i class="bi bi-facebook"></i></a>
+                        <a href={{ club.instagram }} class="instagram"><i class="bi bi-instagram"></i></a>
+                        <a href={{ club.youtube }} class="youtube"><i class="bi bi-youtube"></i></a>
                         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
@@ -35,14 +35,14 @@
                 <div class="info-box">
                     <i class="bx bx-envelope"></i>
                     <h3>Email Us</h3>
-                    <p>contact@example.com</p>
+                    <p>{{ club.email }}</p>
                 </div>
             </div>
             <div class="col-md-6 mt-4 d-flex align-items-stretch">
                 <div class="info-box">
                     <i class="bx bx-phone-call"></i>
                     <h3>Call Us</h3>
-                    <p>+22 254 452</p>
+                    <p>+{{ club.phone }}</p>
                 </div>
             </div>
         </div>
