--- a/templates/clubPage/fragments/SectionProducts.html.twig
+++ b/templates/clubPage/fragments/SectionProducts.html.twig
@@ -1,6 +1,6 @@
 <!-- ======= Products Section ======= -->
 
-<div class="container">
+<div class="container  portfolio">
 
     <div class="portfolio">
         <div class="section-title">
@@ -8,7 +8,7 @@
             <p>Our Products</p>
         </div>
 
-        {{ include('clubPage/fragments/productItem.html.twig') }}
+        {{ include('clubPage/fragments/productItem.html.twig',{'table':products})}}
 
 
 
