--- a/templates/clubs/clubs.html.twig
+++ b/templates/clubs/clubs.html.twig
@@ -1,2 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block title %}Clubs{% endblock %}
+{% block css %}
+{{parent()}}
+
+{% endblock %}
+{% block JS %}
+{{parent()}}
+{% endblock %}
