--- a/templates/clubs/index.html.twig
+++ b/templates/clubs/index.html.twig
@@ -43,14 +43,15 @@
     {% endblock %}
 
 
-    {{ include('entring_game/index.html.twig',{'variable':'valeur'}) }}
-    {{ include('clubs/fragments/caroussel.html.twig',{'variable':'valeur'}) }}
-    {{ include('clubs/fragments/welcome.html.twig',{'variable':'valeur'}) }}
+    {{ include('entring_game/index.html.twig',{}) }}
+    {{ include('clubs/fragments/caroussel.html.twig',{}) }}
+    {{ include('clubs/fragments/welcome.html.twig',{}) }}
     {{ include('clubs/fragments/rebriqueclubs.html.twig',{}) }}
-    {{ include('clubs/fragments/rebriquepruducts.html.twig',{'variable':'valeur'}) }}
-    {{ include('clubs/fragments/team.html.twig',{'variable':'valeur'}) }}
-    {{ include('clubs/fragments/media.html.twig',{'variable':'valeur'}) }}
-    {{ include('clubs/fragments/footer.html.twig',{'variable':'valeur'}) }}
+    {{ include('clubs/fragments/rebriqueevent.html.twig',{}) }}
+    {{ include('clubs/fragments/rebriquepruducts.html.twig',{}) }}
+    {{ include('clubs/fragments/team.html.twig',{}) }}
+    {{ include('clubs/fragments/media.html.twig',{}) }}
+    {{ include('clubs/fragments/footer.html.twig',{}) }}
 
 
 
