--- a/templates/produit_test/index.html.twig
+++ b/templates/produit_test/index.html.twig
@@ -28,6 +28,6 @@
 
 
 
-        {{  include('clubPage/fragments/SectionProducts.html.twig',{'table':Produits}) }}
+        {{  include('clubPage/fragments/SectionProducts.html.twig',{}) }}
     {% endif %}
 {% endblock %}
