--- a/templates/clubPage/fragments/count.html.twig
+++ b/templates/clubPage/fragments/count.html.twig
@@ -1,10 +1,10 @@
-{% for valeur in Counts %}
+{% for valeur in statistiques %}
     <div class="col-lg-3 col-md-6">
         <div class="count-box">
-            <i class="bi {{ valeur['class'] }}"></i>
-            <span data-purecounter-start="0" data-purecounter-end={{ valeur['number'] }} data-purecounter-duration="1"
+            <i class="bi {{ valeur.getIcon() }}"></i>
+            <span data-purecounter-start="0" data-purecounter-end={{ valeur.getValue() }} data-purecounter-duration="1"
                   class="purecounter"></span>
-            <p>{{ valeur['nom'] }}</p>
+            <p>{{ valeur.getName() }}</p>
         </div>
     </div>
 {% endfor %}
