--- a/templates/clubPage/fragments/field.html.twig
+++ b/templates/clubPage/fragments/field.html.twig
@@ -1,6 +1,6 @@
-{% for valeur in Fields %}
+{% for valeur in fields %}
     <div class="progress col-lg-6">
-        <span class="skill">{{ valeur['nom'] }}<i class="val">{{ valeur['pourcentage'] }}</i></span>
+        <span class="skill">{{ valeur.getName() }}<i class="val">{{ valeur.getPourcentage() }}</i></span>
         <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
             </div>
