--- a/templates/clubPage/fragments/productItem.html.twig
+++ b/templates/clubPage/fragments/productItem.html.twig
@@ -1,8 +1,8 @@
 
 <div class="row portfolio-container">
-{#
+
     {% for valeur in table %}
-        <div class="col-lg-4 col-md-6  portfolio-item {{ valeur.name}}">
+        <div class="col-lg-4 col-md-6  portfolio-item  {{ 'filter-'~valeur.getFilter()}}">
             <div class="portfolio-wrap">
                 <img Style="max-width: 100% ; min-width: 100% ; height: 300px" src={{ valeur.img1}} class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -19,6 +19,5 @@
         </div>
 
     {%  endfor %}
-#}
 </div>
 
