--- a/templates/clubs/Account.html.twig
+++ b/templates/clubs/Account.html.twig
@@ -1,9 +1,17 @@
 {% extends 'base.html.twig' %}
 {% block title  %}
-    account
+    Account
 {% endblock  %}
+{% block JS %}
+    {{parent()}}
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/popper.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/main2.js"></script>
+{% endblock %} 
 {% block css %}
     {{ parent() }}
+    <link rel="stylesheet" href="/assets/css/stylemodel.css">
     <link href="/assets/css/userprofile.css" rel="stylesheet">
 {% endblock  %}
 {% block body %}
@@ -14,11 +22,11 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src="/assets/assets/img/userprofile/salem.jpg" alt="Admin" class="rounded-circle" width="150">
+                                <img src={{ user.image}} alt="Admin" class="rounded-circle" width="150">
                                 <div class="mt-3">
-                                    <h4>salem hamdani</h4>
-                                    <p class="text-secondary mb-1">Full Stack Developer</p>
-                                    <button class="btn btn-primary" style="background:#eb345b;" id="button_edit"  onmouseout="bgChange(2)" onmouseover="bgChange(1)">edit profile </button>
+                                    <h4>{{ user.fullname}}</h4>
+                                    <p class="text-secondary mb-1">{{ user.role}}</p>
+                                    <button type="button" class="btn btn-primary py-3 px-4" data-toggle="modal" data-target="#exampleModalCenter">Edit profile</button>
                                 </div>
                             </div>
                         </div>
@@ -28,17 +36,17 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="background-color: #292929;">
                                 <a href="" ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="twitter" viewBox="0 0 16 16">
                                         <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-                                    </svg>  twitteraccount</a>
+                                    </svg> Twitter</a>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="background-color: #292929;">
                                 <a href="" ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="instagram" viewBox="0 0 16 16" >
                                         <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-                                    </svg>   instagramaccount</a>
+                                    </svg>Instagram</a>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="background-color: #292929;">
                                 <a href="" ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="facebook" viewBox="0 0 16 16">
                                         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-                                    </svg>  facebookaccount</a>
+                                    </svg>Facebook</a>
                             </li>
                         </ul>
                     </div>
@@ -51,7 +59,7 @@
                                     <h6 class="mb-0">Full Name</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Salem Hamdani
+                                    {{ user.fullname}}
                                 </div>
                             </div>
                             <hr>
@@ -60,7 +68,7 @@
                                     <h6 class="mb-0">Email</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary ">
-                                    salemhamdani@gmail.com
+                                    {{ user.email}}
                                 </div>
                             </div>
                             <hr>
@@ -69,7 +77,7 @@
                                     <h6 class="mb-0">Phone</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    +21652000111
+                                    {{ user.phone}}
                                 </div>
                             </div>
                             <hr>
@@ -78,7 +86,7 @@
                                     <h6 class="mb-0">Address</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Tunis Tunisia
+                                    {{ user.address}}
                                 </div>
                             </div>
                             <hr>
@@ -87,7 +95,7 @@
                                     <h6 class="mb-0">class</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary ">
-                                    GL2
+                                    {{ user.class}}
                                 </div>
                             </div>
                         </div>
@@ -117,12 +125,117 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Model -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="false">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-md-6 d-flex">
+                        <div class="modal-body p-5 img d-flex img text-center d-flex align-items-center" style="background-image: url(/assets/img/bgmodel.jpg);">
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex">
+                        <div class="modal-body p-4 p-md-5 align-items-center color-2">
+                            <div class="tabulation tabulation2">
+                                <div class="d-flex tabs">
+                                    <ul class="nav nav-tabs border-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" data-toggle="tab" href="#signin">Logins</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" data-toggle="tab" href="#signup" style="color:aqua !important">Personal Data</a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <!-- Tab panes -->
+                                <div class="tab-content border-0">
+                                    <div class="tab-pane p-0 container active" id="signin">
+                                        <div class="text w-100">
+                                            <h3 class="mb-4">Logins</h3>
+                                            <form action="#" class="signin-form">
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="name">New Username</label>
+                                                    <input type="text" class="form-control" placeholder="Username">
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="password">New Password</label>
+                                                    <input type="password" class="form-control" placeholder="Password">
+                                                </div>
+                                                <div class="form-group" >
+                                                    <button type="submit" class="form-control btn btn-primary rounded submit px-3" >Save Change</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane p-0 container fade" id="signup">
+                                        <div class="text w-100">
+                                            <h3 class="mb-4">Personal Data</h3>
+                                            <form action="#" class="signup-form">
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="name">Full Name</label>
+                                                    <input type="text" class="form-control" >
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="email">Email Address</label>
+                                                    <input type="email" class="form-control">
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="password">Phone</label>
+                                                    <input type="text" class="form-control" >
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="email">Address</label>
+                                                    <input type="text" class="form-control">
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="email">Class</label>
+                                                    <input type="text" class="form-control" >
+                                                </div>
+                                                <div class="form-group mb-3">
+                                                    <label class="label" for="email">Twitter Link</label>
+                                                    <input type="url" class="form-control" >
+                                                </div><div class="form-group mb-3">
+                                                    <label class="label" for="email">Instagram Link</label>
+                                                    <input type="url" class="form-control" >
+                                                </div><div class="form-group mb-3">
+                                                    <label class="label" for="email">Facebook Link</label>
+                                                    <input type="url" class="form-control" >
+                                                </div>
+                                                <div class="form-group">
+                                                    <button type="submit" class="form-control btn btn-primary rounded submit px-3">Save Changes</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- endModel -->
+
+
+
+
     <script type="text/javascript">
-function bgChange(i) {
-    if (i==1){
-    document.getElementById('button_edit').style.background = "rgb(32, 201, 151)";
-}else  document.getElementById('button_edit').style.background = "#eb345b";
-}
+        function bgChange(i) {
+            if (i==1){
+                document.getElementById('button_edit').style.background = "rgb(32, 201, 151)";
+            }else  document.getElementById('button_edit').style.background = "#eb345b";
+        }
     </script>
 {% endblock %}
 
